# cba

./: .gitignore  CMakeLists.txt  README.md
include/: calibrated_perspective_projection.h  cba.h  perspective_projection.h  projection.h
src/: calibrated_perspective_projection.cpp  cba.cpp  main.cpp  perspective_projection.cpp  projection.cpp
tests/: generate_scene.h  simple_ba_test.cpp
